	except for variable pointsize. Variable pointsize is handled by adding
	a new field (struct coordinate *)original. This, however, increases the
	size of struct vertex, so it can be configured out under the control of
	HIDDEN3D_VAR_PTSIZE.
	
	* demo/pointsize.dem demo/rgb_variable.dem: Update demos to show off
	use of 'set hidden3d' for 3D point plots.

2005-12-02  Ethan Merritt  <merritt@u.washington.edu>

	* src/gplt_x11.c src/gplt_x11.h: Move #include <sys/select.h> from
	gplt_x11.c to gplt_x11.h so that x11.trm can see it also.
	Bugfix #1365076.

	* term/x11.trm: Remove duplicate #define for constants present in
	gplt_x11.h.

2005-12-01  Michael Williamson  <mwilliamson@users.sourceforge.net>

	* src/set.c (set_size): Do not allow size values <= 0.

2005-11-29  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/mouse.c (apply_zoom): Fix for "set view map; plot x" and y-axis
	reversal when mouse zooming.

2005-11-28  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/datafile.c (df_set_datafile_binary): Give an error message for
	'set datafile binary' (without any option).

2005-11-27  Juergen Wieferink  <wieferink@freenet.de>

	* src/parse.c (const_string_express parse_additive_expression)
	src/parse.h src/eval.c (pop_or_convert_from_string) src/eval.h 
	src/util.c (try_to_get_string) src/internal.c (f_minus)
	src/set.c (set_label set_xyzlabel load_tic_user):

	Clean up parsing and evaluation of try_to_get_string() by moving the
	test against STRING_RESULT_ONLY into the actual parsing code. Now if
	a + or - operator is encountered while parsing something that is 
	supposed to be a string, no further tokens are processed. Before, this
	triggered an arithmetic operation on the string that had to be thrown
	out afterwards.

2005-11-27  Ethan Merritt  <merritt@u.washington.edu>

	* src/set.c (set_arrow): Rewrite set_arrow() to behave the same as
	set_label() and other "set <foo>" routines; attribute changes for any
	one arrow are now incremental.
