@@ -1,0 +1,68 @@
+ATOM   3447  C1  GAL  4104      24.274  47.792  19.835 1.000 14.59
+ATOM   3448  C2  GAL  4104      24.176  49.165  20.487 1.000 12.19
+ATOM   3449  O2  GAL  4104      25.483  49.510  20.991 1.000 11.73
+ATOM   3450  C3  GAL  4104      23.209  49.050  21.658 1.000 11.12
+ATOM   3451  O3  GAL  4104      23.057  50.366  22.204 1.000 12.25
+ATOM   3452  C4  GAL  4104      21.835  48.584  21.103 1.000 11.73
+ATOM   3453  O4  GAL  4104      21.274  49.559  20.255 1.000 11.60
+ATOM   3454  C5  GAL  4104      22.026  47.272  20.344 1.000 13.15
+ATOM   3455  O5  GAL  4104      22.979  47.477  19.256 1.000 13.60
+ATOM   3456  C6  GAL  4104      20.741  46.846  19.619 1.000 13.60
+ATOM   3457  O6  GAL  4104      20.894  45.566  18.998 1.000 15.59
+ATOM   3458  C1  NGA  4105      27.252  45.209  17.378 1.000 21.21
+ATOM   3459  C2  NGA  4105      26.959  46.528  18.117 1.000 20.14
+ATOM   3460  N2  NGA  4105      27.603  46.464  19.414 1.000 20.48
+ATOM   3461  C7  NGA  4105      28.513  47.279  19.926 1.000 18.87
+ATOM   3462  O7  NGA  4105      28.869  48.331  19.310 1.000 19.49
+ATOM   3463  C8  NGA  4105      29.119  46.778  21.241 1.000 19.37
+ATOM   3464  C3  NGA  4105      25.446  46.643  18.176 1.000 19.96
+ATOM   3465  O3  NGA  4105      25.162  47.930  18.736 1.000 17.50
+ATOM   3466  C4  NGA  4105      24.811  46.603  16.773 1.000 20.35
+ATOM   3467  O4  NGA  4105      25.151  47.806  16.078 1.000 23.85
+ATOM   3468  C5  NGA  4105      25.258  45.344  16.062 1.000 20.15
+ATOM   3469  O5  NGA  4105      26.703  45.283  16.050 1.000 20.49
+ATOM   3470  C6  NGA  4105      24.710  45.153  14.665 1.000 25.80
+ATOM   3471  O6  NGA  4105      23.316  45.441  14.605 1.000 32.95
+ATOM   3472  C1  GAL  4106      31.960  44.335  17.404 1.000 24.29
+ATOM   3473  C2  GAL  4106      31.068  44.349  18.640 1.000 23.83
+ATOM   3474  O2  GAL  4106      31.815  43.966  19.778 1.000 25.25
+ATOM   3475  C3  GAL  4106      29.897  43.356  18.485 1.000 21.88
+ATOM   3476  O3  GAL  4106      29.018  43.614  19.573 1.000 21.99
+ATOM   3477  C4  GAL  4106      29.148  43.705  17.180 1.000 20.86
+ATOM   3478  O4  GAL  4106      28.678  45.048  17.287 1.000 19.55
+ATOM   3479  C5  GAL  4106      30.131  43.605  16.018 1.000 21.56
+ATOM   3480  O5  GAL  4106      31.144  44.613  16.262 1.000 23.16
+ATOM   3481  C6  GAL  4106      29.483  43.969  14.687 1.000 22.99
+ATOM   3482  O6  GAL  4106      30.418  43.995  13.615 1.000 23.41
+ATOM   3483  C1  GLC  4107      36.728  46.364  18.623 1.000 22.47
+ATOM   3484  O1  GLC  4107      37.836  46.079  19.510 1.000 20.73
+ATOM   3485  C2  GLC  4107      36.470  45.042  17.892 1.000 23.72
+ATOM   3486  O2  GLC  4107      37.471  44.870  16.894 1.000 31.01
+ATOM   3487  C3  GLC  4107      35.142  45.024  17.152 1.000 25.13
+ATOM   3488  O3  GLC  4107      34.908  43.746  16.584 1.000 29.28
+ATOM   3489  C4  GLC  4107      34.033  45.358  18.168 1.000 25.07
+ATOM   3490  O4  GLC  4107      32.835  45.478  17.402 1.000 25.51
+ATOM   3491  C5  GLC  4107      34.347  46.706  18.792 1.000 24.20
+ATOM   3492  O5  GLC  4107      35.606  46.635  19.468 1.000 23.30
+ATOM   3493  C6  GLC  4107      33.257  47.174  19.783 1.000 24.18
+ATOM   3494  O6  GLC  4107      33.105  46.266  20.831 1.000 29.24
+ATOM   3495  C1  SIA  4108      27.548  43.223  21.397 1.000 23.35
+ATOM   3496  O1A SIA  4108      26.518  43.898  21.026 1.000 20.89
+ATOM   3497  O1B SIA  4108      27.939  43.048  22.572 1.000 20.60
+ATOM   3498  C2  SIA  4108      28.382  42.554  20.297 1.000 21.87
+ATOM   3499  C3  SIA  4108      29.322  41.569  20.940 1.000 22.84
+ATOM   3500  C4  SIA  4108      28.588  40.419  21.610 1.000 23.68
+ATOM   3501  O4  SIA  4108      29.534  39.379  21.912 1.000 25.40
+ATOM   3502  C5  SIA  4108      27.530  39.793  20.690 1.000 23.28
+ATOM   3503  N5  SIA  4108      26.764  38.830  21.480 1.000 21.15
+ATOM   3504  C10 SIA  4108      26.232  37.716  20.977 1.000 21.55
+ATOM   3505  O10 SIA  4108      26.344  37.428  19.748 1.000 25.29
+ATOM   3506  C11 SIA  4108      25.476  36.832  22.002 1.000 20.24
+ATOM   3507  C6  SIA  4108      26.643  40.877  20.076 1.000 21.42
+ATOM   3508  O6  SIA  4108      27.475  41.878  19.440 1.000 23.05
+ATOM   3509  C7  SIA  4108      25.704  40.334  18.987 1.000 22.18
+ATOM   3510  O7  SIA  4108      26.383  39.550  17.967 1.000 21.18
+ATOM   3511  C8  SIA  4108      25.207  41.572  18.210 1.000 21.23
+ATOM   3512  O8  SIA  4108      24.686  42.525  19.109 1.000 19.44
+ATOM   3513  C9  SIA  4108      24.045  41.079  17.325 1.000 23.07
+ATOM   3514  O9  SIA  4108      23.711  42.067  16.394 1.000 23.31
